--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goit-JS-hw-01</title>
+    <link rel="icon"  href="#" >
 </head>
 <body>
     <script src="./js/task-1.js" type="module"></script>
